override bootstrap doc code highlight related css to avoid horizontal overflow

--- a/assets/sass-project/project.scss
+++ b/assets/sass-project/project.scss
@@ -1,6 +1,18 @@
 @import "../sass/mixins";
 @import "../sass/variables";
 
+// bootstrap doc css override
+  .bd-example,
+  .highlight {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .bd-example {
+    border-width: 0.2rem;
+    margin-bottom: 0;
+  }
+
 // project css
   .doc-jumbotron {
     background-image: url(images/doc-jumbotron-bg.jpg);
